<resources>
    <string name="app_name">Orgs</string>
    <string name="name">Nome</string>
    <string name="description">Descrição</string>
    <string name="price">Preço</string>
    <string name="upload">Carregar</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="button_product">Novo produto</string>
    <string name="descricao">Descrição</string>
    <string name="url">URL da imagem</string>
</resources>